--- a/Lesson07-Waitlist/T07.01-Exercise-CreateAContract/app/src/main/res/values/colors.xml
+++ b/Lesson07-Waitlist/T07.01-Exercise-CreateAContract/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimaryLight">#7986CB</color>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimaryLight">#4ebbe6</color>
+    <color name="colorPrimary">#757575</color>
+    <color name="colorPrimaryDark">#616161</color>
+    <color name="colorAccent">#2796c2</color>
 </resources>
