first few exercises
completed tasks

--- a/Lesson09-ToDo-List/T09.03-Exercise-UriMatcher/app/src/main/res/values/colors.xml
+++ b/Lesson09-ToDo-List/T09.03-Exercise-UriMatcher/app/src/main/res/values/colors.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- colors for general appearance -->
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#ffffff</color>
+    <color name="colorPrimaryDark">#f1f1f1</color>
     <color name="colorPrimaryLight">#C5CAE9</color>
-    <color name="colorAccent">#303F9F</color>
+    <color name="colorAccent">#306f9f</color>
 
     <!-- colors for task priority selection -->
     <color name="materialRed">#E74C3C</color>
