--- a/Lesson09-ToDo-List/T09.03-Exercise-UriMatcher/app/src/main/res/values/styles.xml
+++ b/Lesson09-ToDo-List/T09.03-Exercise-UriMatcher/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <resources>
 
     <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="AppTheme" parent="Theme.AppCompat.Light">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
@@ -9,7 +9,7 @@
     </style>
 
     <!-- Style for custom white radio button color -->
-    <style name="WhiteRadioButton" parent="Theme.AppCompat.Light.DarkActionBar">
+    <style name="WhiteRadioButton" parent="Theme.AppCompat.Light">
         <item name="colorControlNormal">@android:color/white</item>
         <item name="colorControlActivated">@android:color/white</item>
     </style>
