--- a/Lesson09-ToDo-List/T09.05-Exercise-QueryAllTasks/app/src/main/res/values/colors.xml
+++ b/Lesson09-ToDo-List/T09.05-Exercise-QueryAllTasks/app/src/main/res/values/colors.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- colors for general appearance -->
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#3be0e9</color>
+    <color name="colorPrimaryDark">#37cfd7</color>
     <color name="colorPrimaryLight">#C5CAE9</color>
-    <color name="colorAccent">#303F9F</color>
+    <color name="colorAccent">#5f8d94</color>
 
     <!-- colors for task priority selection -->
-    <color name="materialRed">#E74C3C</color>
-    <color name="materialOrange">#E67E22</color>
-    <color name="materialYellow">#F1C40F</color>
+    <color name="materialRed">#be4033</color>
+    <color name="materialOrange">#ba681f</color>
+    <color name="materialYellow">#dcb722</color>
 
 </resources>
