--- a/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson11-Completeing-The-UI/T11.01-Exercise-ConstraintLayout/app/src/main/res/layout/activity_main.xml
@@ -1,36 +1,302 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!-- TODO (17) Surround the Constraint layout with a ScrollView -->
-<!-- TODO (2) Replace the Relative layout with a ConstraintLayout -->
-<RelativeLayout
+<!-- DONE (2) Replace the Relative layout with a ConstraintLayout -->
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent" >
 
-    <!-- TODO (3) Create a TextView for the Passenger label and name -->
-    <!-- TODO (4) Use tool:text to set the text value -->
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="4dp"
+        android:orientation="vertical">
 
-    <!-- TODO (5) Create an ImageView for the left rectangle -->
-    <!-- TODO (6) Set the background to the shape_rectangle_stroke drawable -->
+    <TextView
+        android:id="@+id/textView_passengerLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="@string/passenger_label"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginLeft="16dp"
+        android:letterSpacing="0.5"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:targetApi="lollipop" />
 
-    <!-- TODO (7) Create an ImageView for the divider -->
+    <TextView
+        android:id="@+id/textView_passengerName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        tools:text="@string/passenger_name"
+        android:textColor="@color/colorPrimary"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        app:layout_constraintLeft_toLeftOf="@id/textView_passengerLabel"
+        app:layout_constraintTop_toBottomOf="@+id/textView_passengerLabel" />
 
-    <!-- TODO (8) Create an ImageView for the rightRectangle -->
+    <ImageView
+        android:id="@+id/leftRectangle"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_passengerName"
+        android:background="@drawable/shape_rectangle_stroke"
+        android:layout_marginLeft="32dp"
+        tools:ignore="ContentDescription"/>
 
-    <!-- TODO (9) Create a TextView for the origin code, the destination code and the flight code -->
+    <ImageView
+        android:id="@+id/rightRectangle"
+        android:layout_width="60dp"
+        android:layout_height="80dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView_passengerName"
+        android:background="@drawable/shape_rectangle_stroke"
+        android:layout_marginRight="32dp"
+        tools:ignore="ContentDescription" />
 
-    <!-- TODO (15) Import the plane image SVG file into the drawable directory and name it art_plane -->
-    <!-- TODO (16) Create an ImageView for the plane and set the background to art_plane drawable -->
+    <ImageView
+        android:id="@+id/divider"
+        android:layout_width="0dp"
+        android:layout_height="1dp"
+        android:background="@color/colorPrimaryLight"
+        app:layout_constraintLeft_toRightOf="@id/leftRectangle"
+        app:layout_constraintRight_toLeftOf="@id/rightRectangle"
+        app:layout_constraintTop_toBottomOf="@id/rightRectangle"
+        app:layout_constraintBottom_toTopOf="@id/rightRectangle"
+        app:layout_constraintHorizontal_bias="0.0"
+        tools:ignore="ContentDescription"/>
 
-    <!-- TODO (10) Create a TextView for the time texts and their corresponding labels -->
+    <TextView
+        android:id="@+id/origin_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        tools:text="@string/origin_code"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toStartOf="@+id/divider"
+        app:layout_constraintStart_toStartOf="@+id/leftRectangle"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"/>
 
-    <!-- TODO (11) Create an ImageView for the blue table's header -->
+    <TextView
+        android:id="@+id/destination_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="@+id/rightRectangle"
+        app:layout_constraintStart_toEndOf="@+id/divider"
+        app:layout_constraintTop_toBottomOf="@+id/divider"
+        tools:text="@string/destination_code" />
 
-    <!-- TODO (12) Create an ImageView for the blue table's body -->
+    <TextView
+        android:id="@+id/flight_code_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        android:textColor="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="@+id/divider"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/divider"
+        app:layout_constraintTop_toTopOf="@+id/divider"
+        tools:text="@string/flight_code" />
 
-    <!-- TODO (13) Create a TextView for each of the labels and text fields in the blue table -->
+    <ImageView
+        android:id="@+id/art_plane_iv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toBottomOf="@+id/divider"
+        app:layout_constraintEnd_toEndOf="@+id/divider"
+        app:layout_constraintLeft_toRightOf="@id/leftRectangle"
+        app:layout_constraintRight_toLeftOf="@id/destination_tv"
+        app:layout_constraintStart_toStartOf="@+id/divider"
+        android:background="@drawable/ic_plane"
+        tools:ignore="ContentDescription" />
 
-    <!-- TODO (14) Create an ImageView for the barcode -->
+    <TextView
+        android:id="@+id/tv_boardingTime_label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="32dp"
+        android:text="@string/boarding_time_label"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/leftRectangle"
+        android:layout_marginLeft="16dp" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/tv_boardingIn_Label"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="@string/boarding_in_label"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        app:layout_constraintEnd_toEndOf="@+id/rightRectangle"
+        app:layout_constraintTop_toBottomOf="@+id/leftRectangle" />
+
+    <TextView
+        android:id="@+id/tv_boarding_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        app:layout_constraintStart_toStartOf="@id/tv_boardingTime_label"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boardingTime_label"
+        tools:text="@string/boarding_time" />
+
+    <TextView
+        android:id="@+id/tv_boardingIn_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display1"
+        android:textColor="@color/colorBad"
+        app:layout_constraintStart_toStartOf="@id/tv_boardingIn_Label"
+        app:layout_constraintTop_toBottomOf="@id/tv_boardingIn_Label"
+        tools:text="@string/boarding_in_time" />
+
+    <TextView
+        android:id="@+id/departure_label_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        android:text="@string/departure_time_label"
+        app:layout_constraintStart_toStartOf="@id/tv_boarding_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boarding_time" />
+
+    <TextView
+        android:id="@+id/departure_time_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/colorGood"
+        android:layout_marginTop="0dp"
+        app:layout_constraintStart_toStartOf="@id/departure_label_tv"
+        app:layout_constraintTop_toBottomOf="@id/departure_label_tv"
+        tools:text="@string/departure_time" />
+
+    <TextView
+        android:id="@+id/arrival_label_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
+        android:text="@string/arrival_time_label"
+        app:layout_constraintStart_toStartOf="@+id/tv_boardingIn_time"
+        app:layout_constraintTop_toBottomOf="@+id/tv_boardingIn_time" />
+
+    <TextView
+        android:id="@+id/arrival_time_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
+        android:textColor="@color/colorGood"
+        tools:text="@string/arrival_time"
+        app:layout_constraintStart_toStartOf="@+id/arrival_label_tv"
+        app:layout_constraintTop_toBottomOf="@+id/arrival_label_tv" />
+
+    <ImageView
+        android:id="@+id/imageView5"
+        android:layout_width="0dp"
+        android:layout_height="40dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="48dp"
+        android:background="@color/colorPrimaryLight"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/departure_time_tv"
+        tools:ignore="ContentDescription"/>
+
+    <ImageView
+        android:id="@+id/drawable_iv"
+        android:layout_width="0dp"
+        android:layout_height="80dp"
+        android:background="@color/colorPrimary"
+        app:layout_constraintEnd_toEndOf="@+id/imageView5"
+        app:layout_constraintStart_toStartOf="@+id/imageView5"
+        app:layout_constraintTop_toBottomOf="@+id/imageView5"
+        tools:ignore="ContentDescription"/>
+
+    <ImageView
+        android:id="@+id/imageView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        app:layout_constraintEnd_toEndOf="@id/drawable_iv"
+        app:layout_constraintStart_toStartOf="@id/drawable_iv"
+        app:layout_constraintTop_toBottomOf="@id/drawable_iv"
+        android:background="@mipmap/barcode"
+        tools:ignore="ContentDescription"/>
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/terminal_label"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/drawable_iv"
+            app:layout_constraintStart_toStartOf="@+id/imageView5"
+            app:layout_constraintTop_toTopOf="@+id/imageView5"
+            android:layout_marginLeft="16dp" />
+
+        <TextView
+            android:id="@+id/textView15"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/gate_label"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/drawable_iv"
+            app:layout_constraintEnd_toStartOf="@+id/arrival_time_tv"
+            app:layout_constraintHorizontal_bias="0.50"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/textView14"
+            app:layout_constraintTop_toTopOf="@+id/imageView5"
+            app:layout_constraintVertical_bias="0.523" />
+
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginTop="16dp"
+            android:text="@string/seat_label"
+            android:textColor="@android:color/white"
+            app:layout_constraintBottom_toTopOf="@+id/drawable_iv"
+            app:layout_constraintEnd_toEndOf="@+id/imageView5"
+            app:layout_constraintTop_toTopOf="@+id/imageView5"
+            android:layout_marginRight="16dp" />
+
+
+    </android.support.constraint.ConstraintLayout>
+</ScrollView>
 
