--- a/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/src/main/res/layout/activity_main.xml
+++ b/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,8 @@
     <android.support.constraint.ConstraintLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:layout_margin="6dp" >
 
         <TextView
             android:text="@string/passenger_label"
@@ -25,9 +26,9 @@
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:layout_marginLeft="16dp"
             tools:layout_constraintTop_creator="1"
-            tools:layout_constraintLeft_creator="1" />
+            tools:layout_constraintLeft_creator="1"
+            tools:targetApi="lollipop" />
 
 
         <TextView
@@ -40,7 +41,6 @@
             app:layout_constraintTop_toBottomOf="@+id/textViewPassengerLabel"
             android:layout_marginStart="16dp"
             app:layout_constraintLeft_toLeftOf="parent"
-            android:layout_marginLeft="16dp"
             tools:layout_constraintTop_creator="1" />
 
 
@@ -51,9 +51,9 @@
             android:background="@drawable/shape_rectangle_stroke"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewPassengerName"
-            android:layout_marginLeft="32dp"
             android:layout_marginTop="16dp"
-            android:layout_marginStart="32dp" />
+            android:layout_marginStart="32dp"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/divider"
@@ -64,7 +64,8 @@
             app:layout_constraintRight_toLeftOf="@+id/rightRectangle"
             app:layout_constraintTop_toBottomOf="@+id/rightRectangle"
             app:layout_constraintBottom_toTopOf="@+id/rightRectangle"
-            app:layout_constraintHorizontal_bias="0.0"/>
+            app:layout_constraintHorizontal_bias="0.0"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/rightRectangle"
@@ -73,9 +74,9 @@
             android:background="@drawable/shape_rectangle_stroke"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@id/textViewPassengerName"
-            android:layout_marginRight="32dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp" />
+            android:layout_marginEnd="32dp"
+            tools:ignore="ContentDescription" />
 
         <TextView
             tools:text="@string/origin_code"
@@ -108,7 +109,7 @@
             app:layout_constraintLeft_toRightOf="@+id/leftRectangle"
             app:layout_constraintRight_toLeftOf="@+id/rightRectangle"
             android:layout_marginBottom="16dp"
-            />
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/textViewFlightCode"
@@ -117,7 +118,6 @@
             android:layout_height="wrap_content"
             android:textAppearance="@style/TextAppearance.AppCompat.Display1"
             android:textColor="@color/colorPrimary"
-
             app:layout_constraintTop_toTopOf="@+id/divider"
             app:layout_constraintLeft_toRightOf="@+id/leftRectangle"
             app:layout_constraintRight_toLeftOf="@+id/rightRectangle"
@@ -139,7 +139,7 @@
             app:layout_constraintTop_toBottomOf="@+id/leftRectangle"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp" />
+            tools:targetApi="lollipop" />
 
 
         <TextView
@@ -162,7 +162,8 @@
             android:letterSpacing="0.3"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTime"
-            app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTime" />
+            app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTime"
+            tools:targetApi="lollipop" />
 
 
         <TextView
@@ -187,7 +188,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/leftRectangle"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="40dp" />
+            tools:targetApi="lollipop" />
 
 
         <TextView
@@ -210,7 +211,8 @@
             android:letterSpacing="0.3"
             app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInCountdown"
             app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInCountdown"
-            android:layout_marginTop="8dp"/>
+            android:layout_marginTop="8dp"
+            tools:targetApi="lollipop" />
 
 
         <TextView
@@ -234,7 +236,8 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewDepartureTime"
-            app:layout_constraintHorizontal_bias="0.33" />
+            app:layout_constraintHorizontal_bias="0.33"
+            tools:ignore="ContentDescription" />
 
         <ImageView
             android:id="@+id/tableImage"
@@ -246,7 +249,8 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tableHeaderImage"
-            app:layout_constraintBottom_toBottomOf="@+id/textViewTerminal"/>
+            app:layout_constraintBottom_toBottomOf="@+id/textViewTerminal"
+            tools:ignore="ContentDescription" />
 
 
 
@@ -339,7 +343,7 @@
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tableImage"
             android:layout_marginTop="16dp"
-            />
+            tools:ignore="ContentDescription" />
 
     </android.support.constraint.ConstraintLayout>
 </ScrollView>
