--- a/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/src/main/res/layout/activity_main.xml
+++ b/Lesson11-Completeing-The-UI/T11.02-Exercise-DataBinding/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-    //TODO (2) Use <layout> as the root tag for activity_main to generate the ActivityMainBinding
--->
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/scroll"
+
+<!--<layout
+
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent" -->
+<layout
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android" >
+
+    <ScrollView
+        android:id="@+id/scroll"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
 
     <android.support.constraint.ConstraintLayout
         android:orientation="vertical"
@@ -346,4 +351,6 @@
             tools:ignore="ContentDescription" />
 
     </android.support.constraint.ConstraintLayout>
-</ScrollView>
+  </ScrollView>
+</layout>
+<!--/layout-->
