--- a/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/app/src/main/res/layout/activity_main.xml
+++ b/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/app/src/main/res/layout/activity_main.xml
@@ -12,12 +12,13 @@
 <ScrollView
     android:id="@+id/scroll"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:ignore="ContentDescription, RTLhardcoded, UnusedAttribute" >
 
     <android.support.constraint.ConstraintLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content" >
 
         <TextView
             android:text="@string/passenger_label"
@@ -84,7 +85,8 @@
             app:layout_constraintTop_toBottomOf="@id/textViewPassengerName"
             android:layout_marginRight="32dp"
             android:layout_marginTop="16dp"
-            android:layout_marginEnd="32dp" />
+            android:layout_marginEnd="32dp"
+            tools:ignore="ContentDescription, RTLhardcoded" />
 
         <TextView
             tools:text="@string/origin_code"
@@ -117,7 +119,7 @@
             app:layout_constraintLeft_toRightOf="@+id/leftRectangle"
             app:layout_constraintRight_toLeftOf="@+id/rightRectangle"
             android:layout_marginBottom="16dp"
-            />
+            tools:ignore="ContentDescription, RTLhardcoded" />
 
         <TextView
             android:id="@+id/textViewFlightCode"
@@ -148,7 +150,8 @@
             app:layout_constraintTop_toBottomOf="@+id/leftRectangle"
             android:layout_marginTop="16dp"
             android:layout_marginStart="16dp"
-            android:layout_marginLeft="16dp" />
+            android:layout_marginLeft="16dp"
+            tools:ignore="ContentDescription, RTLhardcoded, UnusedAttribute" />
 
 
         <TextView
@@ -171,7 +174,8 @@
             android:letterSpacing="0.3"
             android:layout_marginTop="8dp"
             app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTime"
-            app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTime" />
+            app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTime"
+            tools:ignore="ContentDescription, RTLhardcoded, UnusedAttribute" />
 
 
         <TextView
@@ -196,7 +200,8 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/leftRectangle"
             android:layout_marginTop="16dp"
-            android:layout_marginRight="40dp" />
+            android:layout_marginRight="40dp"
+            tools:ignore="ContentDescription, RTLhardcoded, UnusedAttribute" />
 
 
         <TextView
