--- a/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/app/src/main/res/layout-land/activity_main.xml
+++ b/Lesson11-Completeing-The-UI/T11.03-Exercise-LandscapeLayout/app/src/main/res/layout-land/activity_main.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:ignore="ContentDescription, RTLhardcoded, UnusedAttribute" >
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ScrollView
         android:id="@+id/scroll"
@@ -12,7 +11,8 @@
         <android.support.constraint.ConstraintLayout
             android:orientation="vertical"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            tools:ignore="ContentDescription, RTLhardcoded, UnusedAttribute">
 
             <TextView
                 android:text="@string/passenger_label"
@@ -54,8 +54,7 @@
                 android:id="@+id/flight_info"
                 layout="@layout/flight_info"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                app:layout_constraintRight_toRightOf="parent" />
+                android:layout_height="wrap_content" />
 
 
             <TextView
@@ -74,13 +73,13 @@
 
             <TextView
                 android:id="@+id/textViewBoardingTime"
-                tools:text="@string/boarding_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@android:color/black"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingTimeLabel"
+                tools:text="@string/boarding_time" />
 
 
             <TextView
@@ -108,27 +107,26 @@
 
             <TextView
                 android:id="@+id/textViewBoardingInTimeLabel"
-                android:text="@string/boarding_in_label"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
-                android:letterSpacing="0.3"
-                android:layout_marginEnd="40dp"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/flight_info"
+                android:layout_marginEnd="8dp"
                 android:layout_marginTop="16dp"
-                android:layout_marginRight="40dp" />
+                android:letterSpacing="0.3"
+                android:text="@string/boarding_in_label"
+                android:textAppearance="@style/TextAppearance.AppCompat.Caption"
+                app:layout_constraintEnd_toEndOf="@+id/flight_info"
+                app:layout_constraintTop_toBottomOf="@+id/flight_info" />
 
 
             <TextView
                 android:id="@+id/textViewBoardingInCountdown"
-                tools:text="@string/boarding_in_time"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                 android:textColor="@color/colorBad"
                 app:layout_constraintLeft_toLeftOf="@+id/textViewBoardingInTimeLabel"
-                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInTimeLabel" />
+                app:layout_constraintTop_toBottomOf="@+id/textViewBoardingInTimeLabel"
+                tools:text="@string/boarding_in_time" />
 
 
             <TextView
@@ -157,29 +155,32 @@
                     COMPLETED (6) Add an include tag in activity_main to include boardingInfo in the right position
             -->
             <include
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textViewArrivalTime"
-                android:layout_marginTop="16dp"
                 android:id="@+id/boarding_info"
                 layout="@layout/boarding_info"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                app:layout_constraintRight_toRightOf="parent"
-                android:layout_marginStart="16dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginRight="16dp"/>
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                app:layout_constraintBottom_toBottomOf="@+id/flight_info"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/flight_info" />
 
 
             <ImageView
+                android:id="@+id/barcode"
                 android:layout_width="100dp"
                 android:layout_height="100dp"
-                app:srcCompat="@mipmap/barcode"
-                android:id="@+id/barcode"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/flight_info"
                 app:layout_constraintTop_toBottomOf="@+id/boarding_info"
-                android:layout_marginTop="16dp" />
+                app:srcCompat="@mipmap/barcode" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
