--- a/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/src/main/res/layout/activity_main.xml
+++ b/Lesson10-Hydration-Reminder/T10.02-Exercise-CreateNotification/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:padding="16dp"
-    tools:context="com.example.android.background.MainActivity">
+<LinearLayout xmlns:android = "http://schemas.android.com/apk/res/android"
+    xmlns:tools = "http://schemas.android.com/tools"
+    xmlns:app = "http://schemas.android.com/apk/res-auto"
+    android:id = "@+id/activity_main"
+    android:layout_width = "match_parent"
+    android:layout_height = "match_parent"
+    android:background="@color/colorPrimary"
+    android:orientation = "vertical"
+    android:paddingStart="16dp"
+    android:paddingBottom="16dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="0dp"
+    tools:context = "com.example.android.background.MainActivity">
 
     <TextView
-        android:id="@+id/tv_instructions"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:text="@string/instructions" />
+        android:id="@+id/tv_title"
+        android:layout_width = "wrap_content"
+        android:layout_height = "wrap_content"
+        android:layout_marginBottom="16dp"
+        android:text="@string/app_name"
+        android:fontFamily="sans-serif-smallcaps"
+        android:textColor="@android:color/white"
+        android:textStyle="bold"
+        android:textAppearance="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
+        android:layout_gravity="center"/>
+
+    <TextView
+        android:id = "@+id/tv_instructions"
+        android:layout_width = "match_parent"
+        android:layout_height = "wrap_content"
+        android:gravity = "center"
+        android:text = "@string/instructions"
+        android:textColor="@android:color/white"
+        android:fontFamily="sans-serif-condensed"
+        android:textAppearance="@style/TextAppearance.AppCompat.Caption"/>
 
     <FrameLayout
         android:id="@+id/fl_water_increment"
@@ -30,7 +50,7 @@
             android:onClick="incrementWater"
             android:padding="8dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/ic_local_drink_grey_120px" />
+            app:srcCompat="@drawable/ic_local_drink_grey_120px" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -50,7 +70,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:text="@string/default_water_count"
-                android:textColor="#424242"
+                android:textColor="@android:color/white"
                 android:textSize="35sp" />
 
             <View
@@ -70,8 +90,10 @@
             android:id="@+id/iv_power_increment"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:paddingStart="8dp"
+            android:paddingEnd="0dp"
             android:contentDescription="@string/charging_plug_content_desc"
-            android:src="@drawable/ic_power_grey_80px" />
+            app:srcCompat="@drawable/ic_power_grey_80px" />
 
         <TextView
             android:id="@+id/tv_charging_reminder_count"
@@ -82,8 +104,21 @@
             android:layout_marginRight="16dp"
             android:layout_toEndOf="@id/iv_power_increment"
             android:layout_toRightOf="@id/iv_power_increment"
-            android:text="@string/default_charge_notification_count" />
+            android:text="@string/default_charge_notification_count"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@android:color/white"
+            tools:ignore = "RtlHardcoded" />
 
     </RelativeLayout>
-    <!-- TODO (14) Add a button for testing your notification with an onClick method called testNotification -->
+    <!--  (14) Add a button for testing your notification with an onClick method called testNotification -->
+    <Button
+        android:layout_width = "180dp"
+        android:layout_height = "wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/btn_drawable"
+        android:onClick="testNotification"
+        android:text="@string/test_notification"
+        android:fontFamily="sans-serif-condensed"
+        android:textColor="@color/colorPrimaryDark"/>
 </LinearLayout>
